--- a/src/vue-001/src/assets/main.css
+++ b/src/vue-001/src/assets/main.css
@@ -1,5 +1,11 @@
 @import 'tailwindcss';
 
+@layer components {
+  .btn {
+    @apply px-4 py-2 rounded text-white bg-blue-500 hover:bg-blue-800;
+  }
+}
+
 header {
   background: lightgray;
   display: flex;
