--- a/src/vue-001/src/assets/style/main.css
+++ b/src/vue-001/src/assets/style/main.css
@@ -8,7 +8,7 @@
 
 /* tailwind */
 @layer utilities {
-  .btn.btn-red {
+  .btn-red {
     @apply px-4 py-2 rounded text-white bg-red-500 hover:bg-red-700;
   }
 }
