--- a/src/vue-001/src/assets/style/main.css
+++ b/src/vue-001/src/assets/style/main.css
@@ -9,6 +9,6 @@
 /* tailwind */
 @layer utilities {
   .btn-red {
-    @apply px-4 py-2 rounded text-white bg-red-500 hover:bg-red-700;
+    @apply text-white bg-red-500 hover:bg-red-700;
   }
 }
